--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 </head>
 <body>
     <div class="wrapper">
-        <table width="500px" border="3px" align="center">
+        <table>
             <tr>
                 <th>s/n</th>
                 <th>name</th>
                 <th>country</th>
                 <th>number</th>
             </tr>
-            <tr>
+            <tr class="one">
                 <td>1</td>
                 <td>joy</td>
                 <td>nigeria</td>
                 <td>090786545</td>
             </tr>
-            <tr>
+            <tr class="two">
                 <td>2</td>
                 <td>humility</td>
                 <td>newyork</td>
                 <td>09087645344</td>
             </tr>
-            <tr>
+            <tr class="three">
                 <td>3</td>
                 <td>emma</td>
                 <td>nigeria</td>
@@ -40,7 +40,7 @@
                 <td>usa</td>
                 <td>012345678</td>
             </tr>
-            <tr>
+            <tr class="five">
                 <td>5</td>
                 <td>humility</td>
                 <td>canada</td>
@@ -48,7 +48,7 @@
             </tr>
         </table>
         <br>
-        <table width="500px" border="1px" align="center">
+        <!--table width="500px" border="1px" align="center">
             <h1 style="text-align: center;">TUTORIAL TIME TABLE</h1>
             <tr>
                 <th>NAME</th>
